recursion.cons.lessons.recursion.cons.Increasing.scala.error
increasing:8: error: identifier expected but 'return' found.
	return increasing(l.tail);
        ^